Change name to sp_segment (#9)
Also remove unnecessarily workflows

--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -13,13 +13,16 @@ lint:
     - .github/workflows/nf-test.yml
     - .github/workflows/awstest.yml
     - .github/workflows/awsfulltest.yml
+    - .github/workflows/download_pipeline.yml
     - .github/workflows/fix-linting.yml
+    - .github/workflows/release-announcements.yml
+    - .github/workflows/template_version_comment.yml
     - .github/actions/get-shards/action.yml
     - .github/actions/nf-test/action.yml
     - .github/actions/
-    - assets/nf-core-spatialproteomics_logo_light.png
-    - docs/images/nf-core-spatialproteomics_logo_light.png
-    - docs/images/nf-core-spatialproteomics_logo_dark.png
+    - assets/nf-core-sp_segment_logo_light.png
+    - docs/images/nf-core-sp_segment_logo_light.png
+    - docs/images/nf-core-sp_segment_logo_dark.png
     - tests/default.nf.test
   files_unchanged:
     - .github/CONTRIBUTING.md
